# wdbd-project

./: .gitignore  README.md  dashboard.py  database.py  help.md  main.py  menu.py  pyproject.toml  setup.py  upload.py
.streamlit/: config.toml
