[project]
name = "wdbd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "python-dotenv>=0.9.9",
    "openaq>=0.7.0",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12", ## sprawdzic czy nie bedzie potrzebna zmiana na psycopg2-binary>=2.9.12
    "requests>=2.34.2",
    "tabulate>=0.10.0",
    "textual>=8.2.7",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
